# python-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  TEMPLATE_IMPLEMENTATION_PLAN.md  bump.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
about/: index.html
docs/: development.md  index.md  llms.txt  release.md  starter-builder.md  testing.md
docs/about/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: tweaks.css
examples/: __main__.py  say_hello.py
scripts/: check_version.py  rename_workspace.py
search/: search_index.json
src/advanced_project_template/: __init__.py  __main__.py  cli.py  config.py  models.py  renderer.py
tests/: conftest.py  test_tempx.py
