[project]
name = "advanced_project_template"
dynamic = ["version"]
description = "Configurable Python project starter generator."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "John Doe", email = "john@doe.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["template", "starter", "scaffold", "cookiecutter"]
dependencies = [
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "basedpyright",
    "pytest-asyncio",
    "pytest-cov",
    "pytest",
    "ruff",
    "ty",
    "pre-commit"
]

docs = [
    "mkdocs-material",
    "mkdocstrings[python]"
]

all = ["advanced_project_template[dev,docs]"]

[project.scripts]
advanced_project_template = "advanced_project_template.__main__:main"

[project.urls]
Homepage = ""
Documentation = ""
Repository = ""
Issues = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/advanced_project_template/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/advanced_project_template"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "__pycache__", ".ruff_cache", ".pytest_cache", "tmp", "build", "dist", "site"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ty]
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv", "__pycache__", ".ruff_cache", ".pytest_cache", "tmp", "build", "dist", "site"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.basedpyright]
include = ["src", "tests", "examples", "scripts"]
exclude = [".venv", "__pycache__", ".ruff_cache", ".pytest_cache", "tmp", "build", "dist", "site"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = []
